# LSB-Music-App-POC

./: .gitignore  README.md  copilot_instruction.md  pyproject.toml
.copilot/: project.json
app/: data_loader.py  exporter.py  main.py  sessions.py  ui.py
app/db/: __init__.py  print_schema.py  queries.py  schema.py
app/scripts/: add_cimeb_column.py  add_collections_support.py  add_notes_column.py  check_database.py  check_env.py  collections_crud_ui.py  create_music_dirs.py  debug_session_notes.py  examine_excel.py  export_session_to_word.py  generate_playlist.py  init_database.py  manage_music_library.py  reload_musics_table.py  test_add_exercise.py  test_export_session_to_word.py  test_refactored_ui.py  test_session_with_notes.py  test_sessions.py  update_schema.py
app/ui/: __init__.py  add_exercise.py  components.py  exercise_list.py  exercise_selector.py  session_stats.py
docs/: Business statement.md  POC_Retirement_Statement.md  US69_Select and Sequence Exercises via UI.md  US69_implementation_summary.md  US73_implementation_summary.md  US81_implementation_summary.md  US86_implementation_summary.md  User stories - All States.csv  collections_crud_ui_implementation_summary.md  copilot_instruction.md  current_work.md  current_work_implementation_summary.md  log.md  user_story_lsb_catalogue_implementation.md
input/: LSB_Base_flatfile.xlsx
