[project]
name = "lsb-music-app"
version = "0.1.0"
description = "A lightweight local web app to help Biodanza teachers assemble, preview, and manage music sessions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.48.1",
]
